--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 .header {
-  background-image: url(/img/header_bg.png);
+  background-image: url(img/header_bg.png);
   background-color: lightgray;
   background-position: center top;
   background-repeat: no-repeat;
