--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1 {
 }
 
 h2 {
-  font-size: 48px;
+  font-size: calc(14px + 34 * (100vw - 320px) / 1600);
   font-style: normal;
   font-weight: 500;
   line-height: 60px; /* 125% */
@@ -111,9 +111,9 @@ h2 {
     border-radius: 5px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 768px) and (min-height: 560px) {
   .header__content {
-    margin-top: 25vh;
+    margin-top: calc(100vh - 575px);
   }
 }
 .header__supertitle {
@@ -185,6 +185,155 @@ h2 {
   font-style: normal;
   font-weight: 400;
   line-height: 160%;
+}
+
+.catalog {
+  text-align: center;
+  color: #2E363E;
+}
+.catalog__group {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+.catalog__group-item {
+  max-width: 380px;
+}
+.catalog__item-img {
+  width: 380px;
+  height: 245px;
+  border-radius: 10px 10px 0px 0px;
+}
+.catalog__item-info {
+  text-align: left;
+  padding: 50px 44px;
+}
+.catalog__item-title {
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 143%;
+}
+.catalog__item-description {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-top: 12px;
+  margin-bottom: 24px;
+}
+.catalog__item-price {
+  color: #434B53;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 150%;
+  margin-bottom: 14px;
+}
+.catalog__btn {
+  padding: 20px 40px;
+}
+
+.byphoto {
+  position: relative;
+  background-color: #081130;
+  color: #fff;
+  z-index: -2;
+}
+.byphoto::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-image: url(/img/byphoto_phone.png);
+  background-size: 50%;
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  z-index: -1;
+}
+.byphoto__cloud {
+  position: relative;
+  width: 100vw;
+  height: 330px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  z-index: 1;
+}
+.byphoto__cloud--up {
+  background-image: url(/img/byphoto_cloud-up.png);
+}
+.byphoto__inner {
+  display: flex;
+  justify-content: flex-end;
+}
+.byphoto__info {
+  max-width: 490px;
+}
+.byphoto__supertitle {
+  display: inline-block;
+  text-transform: uppercase;
+  padding: 10px 18px;
+  font-size: 11px;
+  background-color: #F2F6FA;
+  color: #2E363E;
+  border-radius: 5px;
+}
+@media (max-width: 768px) {
+  .byphoto__supertitle {
+    font-size: 8px;
+  }
+}
+.byphoto__title {
+  margin-top: 24px;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 60px; /* 125% */
+  letter-spacing: -1px;
+}
+@media (max-width: 768px) {
+  .byphoto__title {
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 278px;
+  }
+}
+.byphoto__description {
+  margin-top: 24px;
+  margin-bottom: 40px;
+  font-size: 21px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 143%; /* 30.03px */
+  letter-spacing: -0.2px;
+}
+@media (max-width: 768px) {
+  .byphoto__description {
+    font-size: 12px;
+    max-width: 350px;
+  }
+}
+.byphoto__btn {
+  padding: 30px 50px;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 152%;
+}
+@media (max-width: 768px) {
+  .byphoto__btn {
+    font-size: 12px;
+    padding: 15px 25px;
+  }
+}
+.byphoto__cloud--down {
+  background-image: url(/img/byphoto_cloud-down.png);
 }
 
 .container {
