--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,7 +17,8 @@ h1{
 }
 
 h2{
-    font-size: 48px;
+    //font-size: 48px;
+    font-size:calc(14px + 34 * (100vw - 320px) / 1600);
     font-style: normal;
     font-weight: 500;
     line-height: 60px; /* 125% */
@@ -128,9 +129,10 @@ h2{
             border-radius: 5px;
         }
         
-        @media(max-width: 768px) {
-            margin-top: 25vh;
-            
+        @media(max-width: 768px) and (min-height: 560px){
+            margin-top: calc(100vh - 575px);
+            //background-color: #0f1214c5;
+            //padding: 50px 40px;
         }
     }
 
@@ -205,6 +207,191 @@ h2{
         line-height: 160%;
     }
 }
+
+.main {
+}
+
+.catalog {
+    text-align: center;
+    color: #2E363E;
+
+		&__title {
+            
+        
+		}
+
+		&__group {
+            margin-top: 80px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+		}
+
+		&__group-item {
+            max-width: 380px;
+		}
+
+		&__item-img {
+            width: 380px;
+            height: 245px;
+            border-radius: 10px 10px 0px 0px;
+		}
+
+		&__item-info {
+            text-align:left;
+            padding: 50px 44px;
+		}
+
+		&__item-title {
+            font-family: Montserrat;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: 143%;
+
+
+		}
+
+		&__item-description {
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 150%;
+            margin-top: 12px;
+            margin-bottom: 24px;
+		}
+
+		&__item-price {
+            color: #434B53;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 150%;
+            margin-bottom: 14px;
+		}
+
+		&__btn {
+            padding: 20px 40px;
+		}
+}
+
+
+.byphoto {
+    position: relative;
+    background-color: #081130;
+    color: #fff;
+    z-index: -2;
+    &::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-image: url(/img/byphoto_phone.png);
+        background-size: 50%;
+        background-repeat: no-repeat;
+        background-position: left bottom;
+        z-index: -1;
+    }
+
+    
+
+    &__cloud {
+        position: relative;
+        width: 100vw;
+        height: 330px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        z-index: 1;
+    }
+
+    &__cloud--up {
+        background-image: url(/img/byphoto_cloud-up.png);
+    }
+    &__inner {
+        display: flex;
+        justify-content: flex-end;
+        @media(max-width: 1024px){
+           
+        }
+
+    }
+
+    &__info {
+        max-width: 490px;
+    }
+
+    &__supertitle {
+        display: inline-block;
+        text-transform: uppercase;
+        
+        padding: 10px 18px;
+        font-size: 11px;
+        background-color: #F2F6FA;
+        color: #2E363E;
+        border-radius: 5px;
+
+        @media(max-width: 768px){
+            font-size: 8px;
+        }
+    }
+
+    &__title {
+        margin-top: 24px;
+        font-size: 48px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 60px; /* 125% */
+        letter-spacing: -1px;
+                
+        @media(max-width: 768px){
+            font-size: 16px;
+            line-height: 24px;
+            max-width: 278px;
+        }
+    }
+
+    &__description {
+        margin-top: 24px;
+        margin-bottom: 40px;
+        font-size: 21px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 143%; /* 30.03px */
+        letter-spacing: -0.2px;
+
+        @media(max-width:768px){
+            font-size: 12px;
+            max-width: 350px;
+        }
+    }
+
+    &__btn {
+        padding: 30px 50px;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 152%;
+
+        @media(max-width:768px){
+            font-size: 12px;
+            padding: 15px 25px;
+        }
+        
+    }
+
+    &__cloud--down {
+        background-image: url(/img/byphoto_cloud-down.png);
+    }
+}
+
+
+//
+// ;
+
 .container {
     max-width: 1180px;
     margin: 0 auto;
