White edges removed.

--- a/css/style.css
+++ b/css/style.css
@@ -217,8 +217,8 @@ h2 {
   max-width: 380px;
 }
 .catalog__item-img {
-  width: 380px;
-  height: 245px;
+  max-width: 100%;
+  max-height: 245px;
   border-radius: 10px 10px 0px 0px;
 }
 .catalog__item-info {
@@ -347,6 +347,13 @@ h2 {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+@media (max-width: 1280px) {
+  .author__inner {
+    flex-direction: column-reverse;
+    gap: 50px;
+    align-items: center;
+  }
+}
 .author__info {
   max-width: 580px;
 }
@@ -372,6 +379,7 @@ h2 {
   padding: 30px 50px;
 }
 .author__photo {
+  width: 100%;
   max-width: 580px;
 }
 
